# posts

./: README.md  configtest.py  pyproject.toml
abstract/: models.py  serializers.py  viewsets.py
auth/: permissions.py  routers.py  tests.py
auth/serializers/: login.py  register.py
auth/viewsets/: __init__.py  logout.py
comment/: models.py  routers.py  serializers.py  tests.py  viewsets.py
comment/migrations/: 0001_initial.py
core/: settings.py  urls.py
fixtures/: comment.py  post.py  user.py
post/: models.py  routers.py  serializers.py  tests.py  viewsets.py
post/migrations/: 0001_initial.py
post/tests/: test_viewsets.py
services/: comment_service.py  post_service.py  user_service.py
user/: models.py  routers.py  serializers.py  viewsets.py
user/migrations/: 0001_initial.py  0002_user_posts_liked.py  0003_user_comments_liked.py  0004_user_avatar.py  0005_remove_user_avatar.py  0006_user_avatar.py
user/tests/: test_model.py  test_user_viewsets.py
